<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/schools_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
   >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
         android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="tv"
            android:src="@drawable/cap"
            android:text="@string/todo_button_text"
            android:textColor="@color/abi_color" />

        <Button
            android:id="@+id/uni_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/unis_string"
            android:textColor="@color/abi_color" />

        <Button
            android:id="@+id/hschool_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/hschool_string"
            android:textColor="@color/abi_color" />

        <Button
            android:id="@+id/artschool_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/artschool_string"
            android:textColor="@color/abi_color" />
    </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/adMob_school"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="a151618366212ac"
        android:gravity="bottom" />

</RelativeLayout>